# coolbirds

./: .gitignore  Cargo.toml  README.md  Trunk.toml  app.yaml  good_birds.txt  index.html  justfile  wasmer.toml
.github/workflows/: release.yaml
assets/public/: site.webmanifest
birdgen/: Cargo.toml
birdgen/src/: bird.rs  lib.rs
server/: Cargo.toml
server/src/: birdcache.rs  main.rs
src/: bird.rs  birdfetch.rs  clipboard.rs  log_text.rs  main.rs  open_link.rs  random_words.rs  ui.rs
