[package]
name = "cool-birds"
version = "0.2.1"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
accesskit = "0.21.1"
bevy = { version = "0.17.3", features = ["experimental_bevy_ui_widgets"] }
bevy_mod_clipboard = "0.1.2"
csgrs = { git = "https://github.com/sambskn/csgrs.git", branch = "bump-geo", default-features = false, features = [
    "chull-io",
    "delaunay",
    "f64",
    "bevymesh",
    "stl-io",
] }
rand = "0.9.2"
bevy_file_dialog = "0.9.0"

[profile.release]
# make small (z better than s)
opt-level = "z"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = true
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
