[package]
name = "cool-birds"
version = "0.2.4"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["birdgen"]

[workspace.dependencies]
bevy = { version = "0.18" }
rand = "0.9.2"

[dependencies]
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
accesskit = "0.21.1"
birdgen = { path = "./birdgen" }
bevy = { workspace = true, features = ["experimental_bevy_ui_widgets"] }
bevy_file_dialog = { git="https://github.com/richardhozak/bevy_file_dialog.git" }
rand = { workspace = true }

# not-wasm deps
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# open (for opening links in the user's browser) only works on native
open = "5"

# for windows clipboard
[target.'cfg(any(target_os = "windows", target_family = "unix"))'.dependencies]
arboard = { version = "3.6.1", default-features = false }

# wasm only deps
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] } # used to open links/Clipboard
wasm-bindgen-futures = "0.4"
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "^0.3", features = ["wasm_js"] }

[profile.release]
# make small (z better than s)
opt-level = "z"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = true
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
