[package]
name = "birdgen"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { workspace = true }
csgrs = { git = "https://github.com/sambskn/csgrs.git", branch = "bump-bevy", default-features = false, features = [
  # trimmed default deps
  "f64", "bmesh", "mesh", "sketch", "stl-io", "gltf-io",  "chull-io", "sdf", "offset", "delaunay",
  # bevy support
  "bevymesh"
] }
rand = { workspace = true }
